<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_disaster_prep"
            android:title="@string/button_disaster_prep" />
        <item
            android:id="@+id/nav_resource_tracker"
            android:title="@string/button_resource_tracker" />
        <item
            android:id="@+id/nav_view_incidents"
            android:title="@string/button_view_incidents" />
        <item
            android:id="@+id/nav_incident_report"
            android:title="@string/button_incident_report" />
        <item
            android:id="@+id/nav_safe_routing"
            android:title="@string/button_safe_routing" />
    </group>

    <item android:title="Account">
        <menu>
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/ic_logout"
                android:title="@string/button_logout" />
        </menu>
    </item>

</menu>